Fix bg img in <main> for readability.
Also, added a drop shadow to <main>.

--- a/src/css/tcs.css
+++ b/src/css/tcs.css
@@ -32,6 +32,9 @@ header {
 main {
 	background: url("../img/bg.jpg") no-repeat center center fixed;
 	background-size: cover;
+	
+	/* some box shadow for good fun */
+	box-shadow: rgba(0, 0, 0, 0.20) 0 10px 10px;
 	padding: 8px 20px;
 }
 
@@ -56,7 +59,7 @@ h3,
 }
 
 .tcs-img-circle:hover {
-		border-width: thick;
+	border-width: thick;
 }
 
 .tcs-pull-left {
@@ -79,4 +82,10 @@ ul {
 
 .tcs-row {
 	margin: 0;
+}
+
+@media screen and (min-resolution: 2dppx) {
+	main {
+		background: url("../img/bg@2x.jpg") no-repeat center center fixed;
+	}
 }
